rs/macros/tests/ui/gprogram_fails_handle_reply_signature.rs
use sails_macros::program;

struct MyProgram;

#[program]
impl MyProgram {
    pub fn new() -> Self {
        Self
    }

    #[handle_reply]
    fn handle_reply() {}
}

#[tokio::main]
async fn main() {}
